Updated users and groups html pages to support owner realms. visibility support on tabs. Fix role attributes issues.

--- a/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
+++ b/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
@@ -9,6 +9,10 @@ body {
     font: 12px "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,Tahoma,sans-serif;
 }
 
+*:focus {
+    outline: none;
+}
+
 h2 {
 	font-size: 14px;
 	line-height: 14px;
